@@ -1,3 +1,7 @@
+2010-10-26  Kai Habel  <kai.habel@gmx.de>
+
+	* plot/uimenu.m: Add simple demo
+
 2010-10-25  David Bateman  <dbateman@free.fr>
 
 	* statistics/distributions/discrete_pdf.m: Sort values before calling
